applications/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
    component: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        component: keycloak
    spec:
      volumes:
      - name: keycloak-volume
        configMap:
          name: apicurio-realm-configmap
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:22.0.5
          args: [ "start", "--import-realm" ]
          volumeMounts:
            - name: keycloak-volume
              mountPath: /opt/keycloak/data/import
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 900m
              memory: 2000Mi
            requests:
              cpu: 500m
              memory: 1000Mi
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 90
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            privileged: false
