applications/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web server's http port.
  labels:
    application: keycloak
  name: keycloak
spec:
  selector:
    component: keycloak
  ports:
  - port: 8080
    targetPort: 8080
